[project]
name = "cornmeisternl-powerpack"
description = "⚡ PowerPack for ComfyUI by CornmeisterNL"
version = "1.0.2"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests", "Pillow"]

[project.urls]
Repository = "https://github.com/Cornmeister/ComfyUI-CornmeisterNL-PowerPack"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Cornmeister/ComfyUI-CornmeisterNL-PowerPack/wiki"
"Bug Tracker" = "https://github.com/Cornmeister/ComfyUI-CornmeisterNL-PowerPack/issues"

[tool.comfy]
PublisherId = "cornmeister"
DisplayName = "ComfyUI-CornmeisterNL-PowerPack"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

